my-test/testsuite_scan/ir/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:7:3: error: use of undeclared identifier '__m256i'
    7 |   __m256i __m256i_out, __m256i_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:8:3: error: use of undeclared identifier '__m256'
    8 |   __m256 __m256_out, __m256_result;
      |   ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:9:3: error: use of undeclared identifier '__m256d'
    9 |   __m256d __m256d_out, __m256d_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:10:3: error: use of undeclared identifier 'v4u64'
   10 |   v4u64 v4u64_op0, v4u64_op1, v4u64_op2, v4u64_result;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:11:3: error: use of undeclared identifier 'v8i32'
   11 |   v8i32 v8i32_op0, v8i32_op1, v8i32_op2, v8i32_result;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:19:3: error: use of undeclared identifier 'v8i32_op0'
   19 |   v8i32_op0 = (v8i32){0x00000000, 0x00000000, 0x00000000, 0x00000000,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:19:16: error: use of undeclared identifier 'v8i32'
   19 |   v8i32_op0 = (v8i32){0x00000000, 0x00000000, 0x00000000, 0x00000000,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:21:3: error: use of undeclared identifier 'v8i32_op1'
   21 |   v8i32_op1 = (v8i32){0x00000000, 0x6651bfff, 0xf328dfff, 0xffffffff,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:21:16: error: use of undeclared identifier 'v8i32'
   21 |   v8i32_op1 = (v8i32){0x00000000, 0x6651bfff, 0xf328dfff, 0xffffffff,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:23:3: error: use of undeclared identifier 'v8i32_op2'
   23 |   v8i32_op2 = (v8i32){0x0000dfff, 0x0000f328, 0x0000ffff, 0x0000ffff,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:23:16: error: use of undeclared identifier 'v8i32'
   23 |   v8i32_op2 = (v8i32){0x0000dfff, 0x0000f328, 0x0000ffff, 0x0000ffff,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:25:3: error: use of undeclared identifier 'v8i32_result'
   25 |   v8i32_result = (v8i32){0x0000dfff, 0x0000f328, 0x0000ffff, 0xffffffff,
      |   ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:25:19: error: use of undeclared identifier 'v8i32'
   25 |   v8i32_result = (v8i32){0x0000dfff, 0x0000f328, 0x0000ffff, 0xffffffff,
      |                   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:27:3: error: use of undeclared identifier '__m256_out'
   27 |   __m256_out = __lasx_xvfmadd_s((__m256)v8i32_op0, (__m256)v8i32_op1, (__m256)v8i32_op2);
      |   ^~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:27:16: error: call to undeclared function '__lasx_xvfmadd_s'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   27 |   __m256_out = __lasx_xvfmadd_s((__m256)v8i32_op0, (__m256)v8i32_op1, (__m256)v8i32_op2);
      |                ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:27:34: error: use of undeclared identifier '__m256'
   27 |   __m256_out = __lasx_xvfmadd_s((__m256)v8i32_op0, (__m256)v8i32_op1, (__m256)v8i32_op2);
      |                                  ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:27:53: error: use of undeclared identifier '__m256'
   27 |   __m256_out = __lasx_xvfmadd_s((__m256)v8i32_op0, (__m256)v8i32_op1, (__m256)v8i32_op2);
      |                                                     ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:27:72: error: use of undeclared identifier '__m256'
   27 |   __m256_out = __lasx_xvfmadd_s((__m256)v8i32_op0, (__m256)v8i32_op1, (__m256)v8i32_op2);
      |                                                                        ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmadd_s.c:28:19: error: use of undeclared identifier 'v8i32_result'
   28 |   check_lasx_out(&v8i32_result, &__m256_out, sizeof(__m256_out), __FILE__, __LINE__);
      |                   ^~~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
